fix overflow iphone

--- a/css/main.sass
+++ b/css/main.sass
@@ -160,6 +160,7 @@ body
       font-size: 20px
       line-height: 1.3
       color: #666665
+      word-wrap: break-word
     .post-meta
       font-size: 14px
       color: #b3b3b1
